Agregué estilo a los nuevos datos de footer

--- a/Estilo/estilo1.css
+++ b/Estilo/estilo1.css
@@ -215,3 +215,13 @@ footer{
 #botonPedido{
     margin-left: 65%;
 }
+
+/*cambios desde DevJr*/
+#cel{
+    color: white;
+    margin-left: 3%;
+}
+#Ubicacion{
+    color: white;
+    margin-left: 3%;
+}
